--- a/sass/components/_first-screen.scss
+++ b/sass/components/_first-screen.scss
@@ -1,3 +1,20 @@
-h1 {
-    font-family: $header-font;
+.first-screen {
+    height: 100vh;
+    background: url('../../img/bg-light.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding: 0;
+    box-shadow: inset 3000px 3000px rgba($color: #fff, $alpha: .2);
+    .main-content-wrapper {
+        width: 50%;
+        margin: 10% 5%;
+        img {
+            width: 100%;
+        }
+        .short-desc {
+            font-size: 1.4rem;
+        }
+    }
+    
 }
