--- a/sass/main.css
+++ b/sass/main.css
@@ -28,4 +28,103 @@
 .first-screen .main-content-wrapper .short-desc {
   font-size: 1.4rem;
 }
+
+.first-screen .main-content-wrapper #header-web-d {
+  width: 100%;
+  -webkit-animation: fill 2s ease forwards 4s;
+          animation: fill 2s ease forwards 4s;
+}
+
+.first-screen .main-content-wrapper #header-web-d path:nth-child(1) {
+  stroke-dasharray: 544px;
+  stroke-dashoffset: 544px;
+  -webkit-animation: header-anim 2s ease forwards;
+          animation: header-anim 2s ease forwards;
+}
+
+.first-screen .main-content-wrapper #header-web-d path:nth-child(2) {
+  stroke-dasharray: 439px;
+  stroke-dashoffset: 439px;
+  -webkit-animation: header-anim 2s ease forwards .3s;
+          animation: header-anim 2s ease forwards .3s;
+}
+
+.first-screen .main-content-wrapper #header-web-d path:nth-child(3) {
+  stroke-dasharray: 519px;
+  stroke-dashoffset: 519px;
+  -webkit-animation: header-anim 2s ease forwards .6s;
+          animation: header-anim 2s ease forwards .6s;
+}
+
+.first-screen .main-content-wrapper #header-web-d path:nth-child(4) {
+  stroke-dasharray: 462px;
+  stroke-dashoffset: 462px;
+  -webkit-animation: header-anim 2s ease forwards .9s;
+          animation: header-anim 2s ease forwards .9s;
+}
+
+.first-screen .main-content-wrapper #header-web-d path:nth-child(5) {
+  stroke-dasharray: 439px;
+  stroke-dashoffset: 439px;
+  -webkit-animation: header-anim 2s ease forwards 1.2s;
+          animation: header-anim 2s ease forwards 1.2s;
+}
+
+.first-screen .main-content-wrapper #header-web-d path:nth-child(6) {
+  stroke-dasharray: 440px;
+  stroke-dashoffset: 440px;
+  -webkit-animation: header-anim 2s ease forwards 1.5s;
+          animation: header-anim 2s ease forwards 1.5s;
+}
+
+.first-screen .main-content-wrapper #header-web-d path:nth-child(7) {
+  stroke-dasharray: 187px;
+  stroke-dashoffset: 187px;
+  -webkit-animation: header-anim 2s ease forwards 1.8s;
+          animation: header-anim 2s ease forwards 1.8s;
+}
+
+.first-screen .main-content-wrapper #header-web-d path:nth-child(8) {
+  stroke-dasharray: 472px;
+  stroke-dashoffset: 472px;
+  -webkit-animation: header-anim 2s ease forwards 2.1s;
+          animation: header-anim 2s ease forwards 2.1s;
+}
+
+.first-screen .main-content-wrapper #header-web-d path:nth-child(9) {
+  stroke-dasharray: 478px;
+  stroke-dashoffset: 478px;
+  -webkit-animation: header-anim 2s ease forwards 2.4s;
+          animation: header-anim 2s ease forwards 2.4s;
+}
+
+@-webkit-keyframes header-anim {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes header-anim {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@-webkit-keyframes fill {
+  from {
+    fill: transparent;
+  }
+  to {
+    fill: #000;
+  }
+}
+
+@keyframes fill {
+  from {
+    fill: transparent;
+  }
+  to {
+    fill: #000;
+  }
+}
 /*# sourceMappingURL=main.css.map */
