add theme switcher

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,2 +1,7 @@
+/*fonts*/
 $main-font: 'Roboto', sans-serif;
 $header-font: 'Roboto Slab', serif;
+
+/*colors*/
+$accent-color: #02B429;
+$main-black: #212529;
