--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -2,13 +2,13 @@
 
 @mixin respond-to($breakpoint) {
     @if $breakpoint == "small" {
-      @media (min-width: 767px) {
+      @media (max-width: 480px) {
         @content;
       }
     }
   
     @else if $breakpoint == "medium" {
-      @media (min-width: 992px) {
+      @media (max-width: 768px) {
         @content;
       }
     }
