--- a/sass/main.css
+++ b/sass/main.css
@@ -1,5 +1,86 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@300;400;700&display=swap");
-.navbar-collapse {
+/*fonts*/
+/*colors*/
+.navbar {
+  -webkit-box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.8) !important;
+}
+
+.navbar .navbar-brand {
+  width: 12rem;
+}
+
+@media (max-width: 768px) {
+  .navbar .navbar-brand {
+    width: 50%;
+  }
+}
+
+.navbar .navbar-brand img {
+  width: 100%;
+}
+
+.navbar .theme-switcher .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.navbar .theme-switcher .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.navbar .theme-switcher .switch input:checked + .slider {
+  background-color: #2196F3;
+}
+
+.navbar .theme-switcher .switch input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px #2196F3;
+          box-shadow: 0 0 1px #2196F3;
+}
+
+.navbar .theme-switcher .switch input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.navbar .theme-switcher .switch .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.navbar .theme-switcher .switch .slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.navbar .theme-switcher .switch .slider.round {
+  border-radius: 34px;
+}
+
+.navbar .theme-switcher .switch .slider.round:before {
+  border-radius: 50%;
+}
+
+.navbar .navbar-collapse {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -16,7 +97,20 @@
           box-shadow: inset 3000px 3000px rgba(255, 255, 255, 0.2);
 }
 
+@media (max-width: 768px) {
+  .first-screen {
+    -webkit-box-shadow: inset 3000px 3000px rgba(255, 255, 255, 0.6);
+            box-shadow: inset 3000px 3000px rgba(255, 255, 255, 0.6);
+  }
+}
+
 .first-screen .main-content-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   margin: 10% 5%;
 }
 
@@ -24,77 +118,131 @@
   width: 100%;
 }
 
-.first-screen .main-content-wrapper .short-desc {
-  font-size: 1.4rem;
+.first-screen .main-content-wrapper #header-web-d {
+  text-align: left;
+  -webkit-animation: fill 1s ease forwards 3s;
+          animation: fill 1s ease forwards 3s;
 }
 
-.first-screen .main-content-wrapper #header-web-d {
-  width: 100%;
-  -webkit-animation: fill 2s ease forwards 4s;
-          animation: fill 2s ease forwards 4s;
+@media (max-width: 768px) {
+  .first-screen .main-content-wrapper #header-web-d {
+    width: 100%;
+  }
 }
 
 .first-screen .main-content-wrapper #header-web-d path:nth-child(1) {
   stroke-dasharray: 544px;
   stroke-dashoffset: 544px;
-  -webkit-animation: header-anim 2s ease forwards;
-          animation: header-anim 2s ease forwards;
+  -webkit-animation: header-anim 1s ease forwards;
+          animation: header-anim 1s ease forwards;
 }
 
 .first-screen .main-content-wrapper #header-web-d path:nth-child(2) {
   stroke-dasharray: 439px;
   stroke-dashoffset: 439px;
-  -webkit-animation: header-anim 2s ease forwards .3s;
-          animation: header-anim 2s ease forwards .3s;
+  -webkit-animation: header-anim 1s ease forwards .2s;
+          animation: header-anim 1s ease forwards .2s;
 }
 
 .first-screen .main-content-wrapper #header-web-d path:nth-child(3) {
   stroke-dasharray: 519px;
   stroke-dashoffset: 519px;
-  -webkit-animation: header-anim 2s ease forwards .6s;
-          animation: header-anim 2s ease forwards .6s;
+  -webkit-animation: header-anim 1s ease forwards .4s;
+          animation: header-anim 1s ease forwards .4s;
 }
 
 .first-screen .main-content-wrapper #header-web-d path:nth-child(4) {
   stroke-dasharray: 462px;
   stroke-dashoffset: 462px;
-  -webkit-animation: header-anim 2s ease forwards .9s;
-          animation: header-anim 2s ease forwards .9s;
+  -webkit-animation: header-anim 1s ease forwards .8s;
+          animation: header-anim 1s ease forwards .8s;
 }
 
 .first-screen .main-content-wrapper #header-web-d path:nth-child(5) {
   stroke-dasharray: 439px;
   stroke-dashoffset: 439px;
-  -webkit-animation: header-anim 2s ease forwards 1.2s;
-          animation: header-anim 2s ease forwards 1.2s;
+  -webkit-animation: header-anim 1s ease forwards 1.1s;
+          animation: header-anim 1s ease forwards 1.1s;
 }
 
 .first-screen .main-content-wrapper #header-web-d path:nth-child(6) {
   stroke-dasharray: 440px;
   stroke-dashoffset: 440px;
-  -webkit-animation: header-anim 2s ease forwards 1.5s;
-          animation: header-anim 2s ease forwards 1.5s;
+  -webkit-animation: header-anim 1s ease forwards 1.3s;
+          animation: header-anim 1s ease forwards 1.3s;
 }
 
 .first-screen .main-content-wrapper #header-web-d path:nth-child(7) {
   stroke-dasharray: 187px;
   stroke-dashoffset: 187px;
-  -webkit-animation: header-anim 2s ease forwards 1.8s;
-          animation: header-anim 2s ease forwards 1.8s;
+  -webkit-animation: header-anim 1s ease forwards 1.6s;
+          animation: header-anim 1s ease forwards 1.6s;
 }
 
 .first-screen .main-content-wrapper #header-web-d path:nth-child(8) {
   stroke-dasharray: 472px;
   stroke-dashoffset: 472px;
-  -webkit-animation: header-anim 2s ease forwards 2.1s;
-          animation: header-anim 2s ease forwards 2.1s;
+  -webkit-animation: header-anim 1s ease forwards 1.8s;
+          animation: header-anim 1s ease forwards 1.8s;
 }
 
 .first-screen .main-content-wrapper #header-web-d path:nth-child(9) {
   stroke-dasharray: 478px;
   stroke-dashoffset: 478px;
-  -webkit-animation: header-anim 2s ease forwards 2.4s;
-          animation: header-anim 2s ease forwards 2.4s;
+  -webkit-animation: header-anim 1s ease forwards 2s;
+          animation: header-anim 1s ease forwards 2s;
+}
+
+.first-screen .main-content-wrapper .and-letter {
+  font-family: "Roboto", sans-serif;
+  font-size: 2rem;
+  margin-bottom: 0;
+  -webkit-animation: appear .4s ease forwards 3.25s;
+          animation: appear .4s ease forwards 3.25s;
+  opacity: 0;
+}
+
+.first-screen .main-content-wrapper h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 3rem;
+  opacity: 0;
+  -webkit-animation: appear .4s ease forwards 3.25s;
+          animation: appear .4s ease forwards 3.25s;
+}
+
+@media (max-width: 768px) {
+  .first-screen .main-content-wrapper h2 {
+    font-size: 2rem;
+  }
+}
+
+.first-screen .main-content-wrapper .short-desc {
+  font-size: 1.4rem;
+  -webkit-animation: appear 2s ease forwards 4s;
+          animation: appear 2s ease forwards 4s;
+  opacity: 0;
+}
+
+.first-screen .main-content-wrapper button {
+  background-color: #02B429;
+  color: #fff;
+  border-radius: 30px;
+  padding: .8rem 2.4rem;
+  margin-top: 2rem;
+  -webkit-animation: appear 1s ease forwards 5.5s;
+          animation: appear 1s ease forwards 5.5s;
+  opacity: 0;
+  -webkit-filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.15));
+  -webkit-transition: all .25s;
+  transition: all .25s;
+}
+
+.first-screen .main-content-wrapper button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all .25s;
+  transition: all .25s;
 }
 
 @-webkit-keyframes header-anim {
@@ -114,7 +262,7 @@
     fill: transparent;
   }
   to {
-    fill: #000;
+    fill: #212529;
   }
 }
 
@@ -123,7 +271,25 @@
     fill: transparent;
   }
   to {
-    fill: #000;
+    fill: #212529;
+  }
+}
+
+@-webkit-keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=main.css.map */
