--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import 'base/fonts';
 @import 'abstracts/variables';
+@import 'abstracts/mixins';
 
 @import 'components/navbar';
 @import 'components/first-screen';
+@import 'components/about-me';
