--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -8,7 +8,13 @@
             width: 100%;
         }
     }
-
+    ul {
+        li {
+            a {
+                font-size: 1.2rem;
+            }
+        }
+    }
     .theme-switcher {
         .switch {
             position: relative;
@@ -21,11 +27,11 @@
                 height: 0;
             }
             input:checked + .slider {
-                background-color: #2196F3;
+                background-color: #1B72BA;
             }
               
             input:focus + .slider {
-                box-shadow: 0 0 1px #2196F3;
+                box-shadow: 0 0 1px #1B72BA;
             }
               
             input:checked + .slider:before {
