--- a/sass/main.css
+++ b/sass/main.css
@@ -21,6 +21,10 @@
   width: 100%;
 }
 
+.navbar ul li a {
+  font-size: 1.2rem;
+}
+
 .navbar .theme-switcher .switch {
   position: relative;
   display: inline-block;
@@ -35,12 +39,12 @@
 }
 
 .navbar .theme-switcher .switch input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #1B72BA;
 }
 
 .navbar .theme-switcher .switch input:focus + .slider {
-  -webkit-box-shadow: 0 0 1px #2196F3;
-          box-shadow: 0 0 1px #2196F3;
+  -webkit-box-shadow: 0 0 1px #1B72BA;
+          box-shadow: 0 0 1px #1B72BA;
 }
 
 .navbar .theme-switcher .switch input:checked + .slider:before {
@@ -291,5 +295,36 @@
   to {
     opacity: 1;
   }
+}
+
+.dark-nav {
+  background-color: rgba(13, 17, 23, 0.7) !important;
+}
+
+.dark-nav .navbar-toggler {
+  color: rgba(255, 255, 255, 0.55) !important;
+  border-color: rgba(255, 255, 255, 0.3) !important;
+}
+
+.dark-nav .navbar-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28233, 233, 233, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
+
+.dark-nav ul li a {
+  color: #F2F2F2 !important;
+}
+
+.dark-first-screen {
+  background: url("/img/bg-dark.jpg") !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  background-position: center center !important;
+  -webkit-box-shadow: inset 3000px 3000px rgba(0, 0, 0, 0.2) !important;
+          box-shadow: inset 3000px 3000px rgba(0, 0, 0, 0.2) !important;
+}
+
+.dark-first-screen .animated-header svg path {
+  stroke: #f2f2f2;
+  fill: #f2f2f2;
 }
 /*# sourceMappingURL=main.css.map */
