add about block

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,4 +4,9 @@ $header-font: 'Roboto Slab', serif;
 
 /*colors*/
 $accent-color: #02B429;
+$header-yellow: #F3C10F;
 $main-black: #212529;
+$main-white: #f2f2f2;
+$light-grey: #c4c4c4;
+$medium-grey: #a5a5a5;
+$medium-blue: #1B72BA;
