--- a/sass/layout/_dark-theme.scss
+++ b/sass/layout/_dark-theme.scss
@@ -10,9 +10,13 @@
     ul {
         li {
             a {
-                color: #F2F2F2 !important;
+                color: $main-white !important;
             }
         }
+    }
+    .theme-icon {
+        stroke: $light-grey !important;
+        opacity: 1 !important;
     }
 }
 
@@ -25,11 +29,17 @@
     .animated-header {
         svg {
             path {
-                stroke: #f2f2f2;
-                fill: #f2f2f2;
+                stroke: $light-grey;
+                // fill: $main-white;
             }
             
         }
+    }
+    p {
+        color: $light-grey;
+    }
+    h2 {
+        color: $light-grey;
     }
     
 }
