--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap');
