--- a/sass/components/_about-me.scss
+++ b/sass/components/_about-me.scss
@@ -1,25 +1,27 @@
 .about-me {
-    .about-header {
-        width: 25%;
-        h1 {
-            font-family: $header-font;
-            font-size: 2.2rem;
-            font-weight: 700;
-            margin: 1rem;
-            position: relative;
-            z-index: 1;
-            margin: 5rem auto 1.5rem auto;
-            &:after {
-                content: "";
-                height: 10px;
-                position: absolute;
-                background-color: $header-yellow;
-                width: 100%;
-                bottom: 5px;
-                left: 0;
-                z-index: -1;
-            }
+    background-color: #DEDDDD;
+    
+    .img-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            border-radius: 50%;
         }
     }
-    
+    .about-text {
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        p {
+            font-size: 1.3rem;
+            font-family: $main-font;
+        }
+        padding: 0 6rem 2rem 0;
+        @include respond-to('medium') {
+            padding: 1.5rem 1rem;
+        }
+        
+    }
 }
