--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,5 +5,6 @@
 @import 'components/navbar';
 @import 'components/first-screen';
 @import 'components/about-me';
+@import 'components/block-header';
 
 @import 'layout/dark-theme';
