block dev-process

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,3 +10,5 @@ $main-white: #f2f2f2;
 $light-grey: #c4c4c4;
 $medium-grey: #a5a5a5;
 $medium-blue: #1B72BA;
+$dark-blue: #00325B;
+$background-dark: #0D1117;
