--- a/sass/components/_about-me.scss
+++ b/sass/components/_about-me.scss
@@ -1,6 +1,6 @@
 .about-me {
     background-color: #DEDDDD;
-    
+    padding-bottom: 3rem;
     .img-wrapper {
         display: flex;
         justify-content: center;
