--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,5 +6,7 @@
 @import 'components/first-screen';
 @import 'components/about-me';
 @import 'components/block-header';
+@import 'components/portfolio';
+@import 'components/dev-process';
 
 @import 'layout/dark-theme';
