--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -1,6 +1,11 @@
 .navbar {
     box-shadow: 0px 8px 12px rgba($color: #000000, $alpha: .1);
     background-color: rgba($color: #fff, $alpha: .8) !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1020;
     .navbar-brand {
         @include respond-to(medium) { width: 50%; }
         width: 12rem;
