--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,5 +8,6 @@
 @import 'components/block-header';
 @import 'components/portfolio';
 @import 'components/dev-process';
+@import 'components/blog';
 
 @import 'layout/dark-theme';
