--- a/sass/main.css
+++ b/sass/main.css
@@ -466,7 +466,14 @@
 }
 
 .dev-process {
+  margin-top: 4rem;
   font-family: "Rubik", sans-serif;
+}
+
+.dev-process .row {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .dev-process h2 {
@@ -478,26 +485,13 @@
   position: relative;
 }
 
-.dev-process .row {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .dev-process .info-text p {
   margin: 2rem 0 3rem 0;
   font-size: 1.2rem;
 }
 
-.dev-process img {
-  width: 60%;
-  max-width: 410px;
-  display: block;
-  margin: 0 auto 3rem auto;
-}
-
 .dev-process .info-text .number {
-  font-size: 20rem;
+  font-size: 24rem;
   position: absolute;
   font-family: "Rubik", sans-serif;
   font-weight: 500;
@@ -506,13 +500,117 @@
   left: 30%;
   top: -60%;
   z-index: -1;
+  line-height: 1;
 }
 
 @media (max-width: 768px) {
   .dev-process .info-text .number {
-    top: -30%;
-    left: 20%;
+    top: -20%;
+    left: 15%;
   }
+}
+
+.dev-process img {
+  width: 60%;
+  max-width: 410px;
+  display: block;
+  margin: 0 auto 3rem auto;
+  opacity: .9;
+}
+
+@media (max-width: 768px) {
+  .dev-process img {
+    max-width: 50%;
+  }
+}
+
+.blog .category div {
+  width: 12rem;
+  height: 12rem;
+  margin: 0 auto;
+  position: relative;
+  margin-bottom: 4rem;
+}
+
+.blog .category .css {
+  background-color: #1B72BA;
+}
+
+.blog .category .js {
+  background-color: #F7AB18;
+}
+
+.blog .category .ui {
+  background-color: #02B429;
+}
+
+.blog .category .cat-icon {
+  -webkit-filter: grayscale(60%);
+          filter: grayscale(60%);
+  cursor: pointer;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.blog .category .cat-icon .first-line {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  color: #fff;
+  font-size: 2.6rem;
+  font-family: var(--main-font);
+  font-weight: 500;
+  margin-right: 1rem;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.blog .category .cat-icon .second-line {
+  position: absolute;
+  right: 0;
+  bottom: -3.6rem;
+  font-size: 2.6rem;
+  font-family: var(--main-font);
+  font-weight: 300;
+  margin-right: 1rem;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  display: block;
+  pointer-events: none;
+}
+
+.blog .category .cat-icon:hover {
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
+}
+
+.blog .category .cat-icon:hover .first-line {
+  bottom: 30%;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.blog .category .cat-icon:hover .second-line {
+  bottom: 10%;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.blog .blog-btn {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 2rem;
+}
+
+.blog .blog-btn button {
+  border-radius: 32px;
+  padding: .7rem 2rem;
 }
 
 .dark-bg {
@@ -581,5 +679,59 @@
 
 .dark-portfolio h1:after {
   background-color: #1B72BA !important;
+}
+
+.dark-portfolio .prjcts-btn {
+  border: 1px solid #F3C10F !important;
+  color: #F3C10F !important;
+}
+
+.dark-portfolio .prjcts-btn:hover {
+  background: #1B72BA !important;
+  color: #f2f2f2 !important;
+  border: 1px solid #1B72BA !important;
+}
+
+.dark-dev h1 {
+  color: #f2f2f2 !important;
+}
+
+.dark-dev h1:after {
+  background-color: #1B72BA !important;
+}
+
+.dark-dev .info-text p, .dark-dev .info-text h2 {
+  color: #f2f2f2 !important;
+}
+
+.dark-dev .info-text .number {
+  color: rgba(44, 130, 201, 0.3) !important;
+}
+
+.dark-dev img {
+  opacity: .8;
+}
+
+.dark-blog h1 {
+  color: #f2f2f2 !important;
+}
+
+.dark-blog h1:after {
+  background-color: #1B72BA !important;
+}
+
+.dark-blog .second-line {
+  color: #f2f2f2 !important;
+}
+
+.dark-blog button {
+  border: 1px solid #F3C10F !important;
+  color: #F3C10F !important;
+}
+
+.dark-blog button:hover {
+  background: #1B72BA !important;
+  color: #f2f2f2 !important;
+  border: 1px solid #1B72BA !important;
 }
 /*# sourceMappingURL=main.css.map */
