--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,5 +9,6 @@
 @import 'components/portfolio';
 @import 'components/dev-process';
 @import 'components/blog';
+@import 'components/contacts';
 
 @import 'layout/dark-theme';
