--- a/sass/main.css
+++ b/sass/main.css
@@ -139,7 +139,7 @@
 
 .first-screen {
   height: 100vh;
-  background: url("../../img/bg-light.jpg");
+  background: url("/../../img/bg-light.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
