fixed img paths

--- a/sass/layout/_dark-theme.scss
+++ b/sass/layout/_dark-theme.scss
@@ -24,7 +24,7 @@
 }
 
 .dark-first-screen {
-    background: url('/img/bg-dark.jpg') !important;
+    background: url('./../img/bg-dark.jpg') !important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
     background-position: center center !important;
