--- a/sass/main.css
+++ b/sass/main.css
@@ -139,7 +139,7 @@
 
 .first-screen {
   height: 100vh;
-  background: url("../../img/bg-light.jpg");
+  background: url("./../img/bg-light.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -735,7 +735,7 @@
 }
 
 .dark-first-screen {
-  background: url("/img/bg-dark.jpg") !important;
+  background: url("./../img/bg-dark.jpg") !important;
   background-repeat: no-repeat !important;
   background-size: cover !important;
   background-position: center center !important;
