added mobile nav + animated header

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $accent-color: #02B429;
 $header-yellow: #F3C10F;
 $main-black: #212529;
 $main-white: #f2f2f2;
+$navbar-white: #eceff1;
 $light-grey: #c4c4c4;
 $medium-grey: #a5a5a5;
 $medium-blue: #1B72BA;
