--- a/src/scss/components/header/_lang-switcher.scss
+++ b/src/scss/components/header/_lang-switcher.scss
@@ -1,5 +1,10 @@
 .lang-switcher {
-    margin: 0 2rem;
+    margin: 2rem .5rem 0 .5rem;
+    display: flex;
+    align-items: center;
+    @include screen-size("desk") {
+        margin: 0 1rem;
+    }
     &__btn {
         border-radius: 50%;
         height: 2.4rem;
@@ -11,5 +16,6 @@
         border: none;
         font-size: 1.1rem;
         padding-top: .3rem;
+        margin-right: .5rem;
     }
 }
