--- a/src/scss/components/header/_navbar.scss
+++ b/src/scss/components/header/_navbar.scss
@@ -1,13 +1,21 @@
 .navbar {
-    background-color: rgba($color: #fff, $alpha: .9);
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    background-color: rgba($color: $navbar-white, $alpha: .9);
     @include screen-size("desk") {
         display: flex;
         justify-content: flex-end;
+        padding: .5rem;
     }
     &__logo {
-        margin: 0 auto 0 0;
+        display: flex;
+        align-items: center;
+        margin: 0 auto 0 1rem;
         img {
-            width: 190px;
+           width: 100%;
+           min-width: 140px;
+           max-width: 190px;
         }
     }
 }
