--- a/src/scss/components/header/_navmenu.scss
+++ b/src/scss/components/header/_navmenu.scss
@@ -1,8 +1,100 @@
 .navmenu {
-    list-style-type: none;
-    font-family: $main-font;
-    color: $main-black;
-    padding-left: 2rem;
+    @include screen-size("desk") {
+        display: flex;
+        align-items: center;
+    }
+    //hamburger menu btn
+    &__menu-toggle-btn {
+        display: flex;
+        align-items: center;
+        position: fixed;
+        top: 26px;
+        right: 20px;
+        width: 26px;
+        height: 26px;
+        cursor: pointer;
+        z-index: 1;
+        @include screen-size("desk") {
+            display: none;
+        }
+    }
+    &__menu-toggle-btn > span,
+    &__menu-toggle-btn > span::before,
+    &__menu-toggle-btn > span::after {
+        display: block;
+        position: absolute;
+        width: 26px;
+        height: 2px;
+        background-color: #616161;
+        transition-duration: .25s;
+    }
+    &__menu-toggle-btn > span::before {
+        content: '';
+        top: -8px;
+    }
+    &__menu-toggle-btn > span::after {
+        content: '';
+        top: 8px;
+    }
+
+    //animate menu btn
+    &__menu-toggler:checked ~ &__menu-toggle-btn > span {
+        transform: rotate(45deg);
+    }
+    &__menu-toggler:checked ~ &__menu-toggle-btn > span::before {
+        top: 0;
+        transform: rotate(0deg);
+    }
+    &__menu-toggler:checked ~ &__menu-toggle-btn > span::after {
+        top: 0;
+        transform: rotate(90deg);
+    }
+
+    //hamburger menu checkbox
+    &__menu-toggler {
+        opacity: 0;
+        
+    }
+    
+    //show menu
+    &__menu-toggler:checked ~ &__list {
+        visibility: visible;
+        right: 0;
+    }
+
+
+    //menu list
+    &__list {
+        box-sizing: border-box;
+        list-style-type: none;
+        font-family: $main-font;
+        color: $main-black;
+        padding: 4rem 1rem 0 2rem;
+        display: block;
+        position: fixed;
+        visibility: hidden;
+        top: 0;
+        right: -100%;
+        width: 300px;
+        height: 100vh;
+        margin: 0;
+        background-color: rgba($color: $navbar-white, $alpha: .9);
+        box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+        transition-duration: .25s;
+
+        @include screen-size("desk") {
+            padding: 0;
+            width: auto;
+            height: auto;
+            display: flex;
+            align-items: center;
+            position: static;
+            background-color: transparent;
+            visibility: visible;
+            box-shadow: none;
+        }
+    }
+    
     &__item {
         padding: .5rem;
     }
@@ -10,6 +102,7 @@
     &__link {
         text-decoration: none;
         color: inherit;
+        font-size: 1.2rem;
         &:hover {
             color: $dark-blue;
         }
