--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,3 +1,12 @@
+//global button
+@mixin button {
+    font-size: 1.1rem;
+    padding: .8rem 2rem;
+    border-radius: 2rem;
+     border: none;
+     cursor: pointer;
+}
+
 //media queries
 
 @mixin screen-size($breakpoint) {
